k8s/ingress-nginx-static-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  annotations:
    service.beta.kubernetes.io/azure-pip-name: "team5ingress-ip"
spec:
  type: LoadBalancer
  loadBalancerIP: "70.153.85.18"
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx 
    app.kubernetes.io/name: ingress-nginx
